mariadb/base/phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: mysql-ns
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
